Debugger configuration set and Backend receiving basic user info

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -4,20 +4,20 @@
         <title>CREDIT RISK ANALYSIS API</title>
     </head>
     <body>
-        <h2>Fill the form to now your credit score</h2>
-        <form method="POST" action="/application">
+        <h2>Fill the form to evaluate your credit score</h2>
+        <form method="POST" action="/score">
             <div class="form-group">
                 <div class="input-group">
-                    <span class="input-group-addon">Please select</span>
-                        <select name="gender" class="selectpicker form-control">
-                            {% for gender in genders %}
-                                <option value="{{ gender }}">{{ gender }}</option>
-                            {% endfor %}
-                        </select>
+                    <label for="sex">Gender:</label>
+                    <select id="sex" name="sex">
+                        {% for gender in genders %}
+                        <option value="{{ gender }}">{{ gender }}</option>
+                        {% endfor %}
+                    </select>
                 </div>
-            <p>
-                <input type="submit" value="Submit">
-            </p>
+                <p>
+                    <input type="submit" value="Submit">
+                </p>
             </div>
         </form>
     </body>
