--- a/api/public/static/css/score.css
+++ b/api/public/static/css/score.css
@@ -1,6 +1,28 @@
 body {
-    background: #333;
+    color: #000;
+    overflow-x: hidden;
+    height: 100%;
+    /* background-image: url("https://i.imgur.com/GMmCQHC.png");*/
+    /*background-image: url("../image/anyoneai_fondo.png");    */
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width:100%;
 }
+
+.btn {
+    background-color: rgb(34, 66, 99);
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  
+  /* Darker background on mouse-over */
+.btn:hover {
+    background-color: RoyalBlue;
+  }
 
 /*Centering the gauge*/
 canvas {
@@ -9,8 +31,8 @@ canvas {
     /* margin: 10px auto; */
 }
 .content {
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     /*background-color: blue;*/
     position: absolute; /*Can also be `fixed`*/
     left: 0;
@@ -143,4 +165,12 @@ canvas {
     .jquery-script-ads {
         display: none
     }
+}
+
+.sub_div {
+    position: fixed;
+    bottom: 0px;
+}
+p {
+    margin-left:110px;
 }
