All tests passed

--- a/api/public/templates/index.html
+++ b/api/public/templates/index.html
@@ -1,3 +1,8 @@
+<!--
+    Goal: Credit score analysis request registration page. Contains all the variables to 
+    be used by the model. Preload personal data from the registered user base. 
+    Get the data from the data dictionary by the get method.
+-->
 <!doctype html>
 <html>
     <head>
