--- a/api/public/templates/score.html
+++ b/api/public/templates/score.html
@@ -1,3 +1,8 @@
+
+<!--
+  Goal: Page to graph the score calculated by the model, the score, the name 
+    and surname of the applicant and the style color are captured
+-->
 <!DOCTYPE html>
 <!-- saved from url=(0140)https://forms.office.com/Pages/ResponsePage.aspx?id=_TkAZSpx4U-4Y4YQPEJcF35mAmXERwFPrYTiyoednI9UNVU3Q0hZQjVSNDUwS0s2VUhWWjVUQzg5QSQlQCN0PWcu -->
 <html dir="ltr" xmlns="http://www.w3.org/1999/xhtml" lang="es-419">
