--- a/api/public/templates/signin.html
+++ b/api/public/templates/signin.html
@@ -1,3 +1,8 @@
+<!--
+    Goal: User login page, captures and validates the registered information and 
+        sends it to certify its existence in the database
+-->
+
 <!doctype html>
 <html>
     <head>
