--- a/api/public/templates/signup.html
+++ b/api/public/templates/signup.html
@@ -1,3 +1,9 @@
+<!--
+    Goal: New user registration page, personal data is captured and validated. 
+        With the data entered, it is validated that the user does not exist and 
+        then proceed to create it. This page communicates with 
+        the OAUTH2 authentication service.
+-->
 <!doctype html>
 <html>
     <head>
@@ -19,7 +25,9 @@
                     <div class="card">
                         
                         <form class="form-card" method="post" action="/auth/signup">
-                            <span id="msgok" style="color: red;"></span>  
+                            <div class="messageok">
+                                <span id="msgok" style="color: aqua; font-size: 60;">User Stored Successfully!!</span>  
+                            </div>                            
 <!--#################################################################################################-->
 <!--################################    PERSONAL DATA     ###########################################-->
 <!--#################################################################################################-->
@@ -87,9 +95,15 @@
                             </div>
 
                             <div class="row justify-content-end">
-                                <div class="form-group col-sm-6"> 
+                                <div class="form-group col-sm-4"> 
+                                    
+                                </div>
+                                <div class="form-group col-sm-4"> 
                                     <button type="submit" id="btn_singup" class="btn-block btn-primary">Sing Up</button> 
                                 </div>
+                                <div class="form-group col-sm-4"> 
+                                    
+                                </div>                                                                
                             </div>
                         </form>
                     </div>
