--- a/api/public/templates/signin.html
+++ b/api/public/templates/signin.html
@@ -57,8 +57,8 @@
 
                             <div class="row justify-content-between text-left">
                                 <div class="form-group col-sm-12"> 
-                                    <button type="submit" id="btn_singin" class="btn-block btn-primary">Sing In</button>                                                                         
-                                    <button type="button" id="btn_singup" class="btn-block btn-primary">Sing Up</button> 
+                                    <button type="submit" id="btn_singin" class="btn-block btn-primary">Sign In</button>
+                                    <button type="button" id="btn_singup" class="btn-block btn-primary">Sign Up</button>
                                 </div>
                             </div>
                         </form>
