--- a/api/public/templates/signup.html
+++ b/api/public/templates/signup.html
@@ -21,7 +21,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
                     <h1><p class="blue-text">Credit Risk Analysis</p></h1>
-                    <p class="blue-text">Enter your data to perform<br> the credit analysis and thus provide your credit scope.</p>
+                    <p class="blue-text">Enter your data to perform<br> the credit analysis and thus provide your credit score.</p>
                     <div class="card">
                         
                         <form class="form-card" method="post" action="/auth/signup">
@@ -89,7 +89,7 @@
                                     <span id="errmsg1" style="color: red;"></span>  
                                 </div>
                                 <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Password<span class="text-danger"> *</span></label> 
-                                    <input type="password" id="password" name="password" placeholder="Enter your last name"> 
+                                    <input type="password" id="password" name="password">
                                     <span id="errmsg2" style="color: red;"></span>  
                                 </div>
                             </div>
@@ -99,7 +99,7 @@
                                     
                                 </div>
                                 <div class="form-group col-sm-4"> 
-                                    <button type="submit" id="btn_singup" class="btn-block btn-primary">Sing Up</button> 
+                                    <button type="submit" id="btn_singup" class="btn-block btn-primary">Sign Up</button>
                                 </div>
                                 <div class="form-group col-sm-4"> 
                                     
